# VoxelGame

./: .gitignore  CMakeLists.txt  README.txt  TODO.txt  build_MinGW_debug.bat  build_MinGW_release.bat
src/: Camera.cpp  Camera.h  Controls.cpp  Controls.h  Engine.cpp  Engine.h  Log.cpp  Log.h  Render.cpp  Render.h  RenderResources.cpp  RenderResources.h  Scene.cpp  Scene.h  SceneResources.h  WindowGLFW.cpp  WindowGLFW.h  WindowGLFW_callbacks.cpp  engine_glfw_callbacks.cpp  engine_properties.h  main.cpp  stdafx.h
src/Collisions/: AABB.cpp  AABB.h  BVHTree.cpp  BVHTree.h  BVHTreeEntities.cpp  BVHTreeEntities.h  Frustum.cpp  Frustum.h  IMergeableVolume.h  IsOnOrForwardPlaneResult.h  Plane.cpp  Plane.h  SphereVolume.cpp  SphereVolume.h
src/Render/: AssetManager.cpp  AssetManager.h  DrawIndirectCommand.h  Framebuffer.h  GBuffer.cpp  GBuffer.h  GLEnum.h  InstancingData.cpp  InstancingData.h  InstancingManager.cpp  InstancingManager.h  MappedBuffer.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  ProjectionPerspective.cpp  ProjectionPerspective.h  Shader.cpp  Shader.h  ShaderStorageBuffer.h  ShaderStorageManager.cpp  ShaderStorageManager.h  TextureArray.cpp  TextureArray.h  TextureManager.cpp  TextureManager.h  UniformBuffer.cpp  UniformBuffer.h  UniformManager.cpp  UniformManager.h  UniformStructs.h  Vertex.h
src/Scene/: Camera.cpp  Camera.h  EntityReferences.cpp  EntityReferences.h  ISceneLogic.h  RenderComponent.cpp  RenderComponent.h  SceneRequest.cpp  SceneRequest.h  SceneResources.cpp  SceneResources.h  Transform.h  (+1 more)
(+63 files in other folders)
